# models.dev

./: .gitignore  .prettierrc  AGENTS.md  Cargo.toml  LICENSE  Makefile  PROVIDER_ICONS.md  README.md  VERSION  biome.json  licenses.txt  models.json  nvidia-update-2026-06.txt  package.json  sst-env.d.ts  sst.config.ts  sync.md
.cache/: rss-cache.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add-model.yml  update-model.yml
.github/workflows/: ci-fixer.yml  ci.yml  close-stale-pull-requests.yml  deploy.yml  issue-fixer.yml  license-check.yml  opencode-issue-fix.yml  opencode.yml  preview.yml  sync-dev-and-deploy.yml  sync-models.yml  sync-openrouter.yml  test-workflow.yml  test.yml  update-vercel-models.yml  update-vercle-models.yml  validate.yml
.opencode/: package-lock.json
.opencode/agent/: ci-fixer.md  issue-fixer.md
.serena/: project.yml
app/: worker.tsx
crates/modelsdev/: Cargo.toml  build.rs
crates/modelsdev/src/: lib.rs  tests.rs
edenai/: provider.toml
models/alibaba/: deepseek-v4-flash.toml  deepseek-v4-pro.toml  glm-5.1.toml  happyhorse-1.0-i2v.toml  happyhorse-1.0-r2v.toml  happyhorse-1.0-t2v.toml  happyhorse-1.0-video-edit.toml  kimi-k2.5.toml  qwen-flash.toml  qwen-max.toml  qwen-mt-flash.toml  qwen-mt-lite.toml  qwen-mt-plus.toml  qwen-omni-turbo.toml  qwen-plus.toml  qwen-turbo.toml  qwen-vl-max.toml  qwen-vl-ocr.toml  qwen-vl-plus.toml  qwen2-5-vl-72b-instruct.toml  qwen3-14b.toml  qwen3-235b-a22b.toml  qwen3-30b-a3b.toml  qwen3-32b.toml  qwen3-8b.toml  qwen3-asr-flash.toml  qwen3-coder-30b-a3b-instruct.toml  qwen3-coder-480b-a35b-instruct.toml  qwen3-coder-flash.toml  qwen3-coder-plus.toml  qwen3-max-preview.toml  qwen3-max.toml  qwen3-next-80b-a3b-instruct.toml  qwen3-next-80b-a3b-thinking.toml  qwen3-vl-235b-a22b-instruct.toml  qwen3-vl-235b-a22b-thinking.toml  qwen3-vl-30b-a3b-instruct.toml  qwen3-vl-30b-a3b-thinking.toml  qwen3-vl-32b-instruct.toml  qwen3-vl-32b-thinking.toml  (+24 more)
models/amazon-bedrock/: meta.llama4-scout-17b-instruct-v1:0.toml
models/anthropic/: claude-3-5-haiku-20241022.toml  claude-3-5-sonnet-20241022.toml  claude-3-7-sonnet-20250219.toml  claude-fable-5.toml  claude-haiku-4-5-20251001.toml  claude-haiku-4-5.toml  claude-opus-4-0.toml  claude-opus-4-1-20250805.toml  claude-opus-4-1.toml  claude-opus-4-20250514.toml  claude-opus-4-5-20251101.toml  claude-opus-4-5.toml  claude-opus-4-6.toml  claude-opus-4-7.toml  claude-opus-4-8.toml  claude-sonnet-4-0.toml  claude-sonnet-4-20250514.toml  claude-sonnet-4-5-20250929.toml  claude-sonnet-4-5.toml  claude-sonnet-4-6.toml  (+1 more)
rss/: rss.toml
script/: feed.ts  license-checker.ts  rss.ts  validate.ts
scripts/: check-nanogpt-models.py  generate-nanogpt-sync.py
test/: rss.test.ts
(+8756 files in other folders)
