[package]
name = "modelsdev"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
serde = { workspace = true }
serde_json = "1.0.149"
thiserror = { workspace = true }

[build-dependencies]
serde_json = "1.0.149"
toml = { workspace = true }

[lints]
workspace = true
