[package]
name = "modelsdev"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
